[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/dialogic/Editor/Events/Parts/CallNode/EventPart_CallNodePicker.gd" type="Script" id=1]
[ext_resource path="res://addons/dialogic/Editor/Events/Parts/Text/GreyLabel.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/dialogic/Editor/Events/Parts/Text/CustomLineEdit.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/dialogic/Editor/Events/styles/InputFieldsStyle.tres" type="Theme" id=4]

[node name="CallNodePicker" type="VBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 4 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" parent="." instance=ExtResource( 2 )]
margin_top = 0.0
margin_right = 782.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "This event calls the function [Function Name] on the [Target Node] (use full path!). It also passes a number of arguments."

[node name="Properties" type="HBoxContainer" parent="."]
margin_top = 18.0
margin_right = 782.0
margin_bottom = 45.0
custom_constants/separation = 8

[node name="TargetNodeLabel" type="Label" parent="Properties"]
margin_top = 6.0
margin_right = 81.0
margin_bottom = 20.0
text = "Target Node:"

[node name="TargetNodeEdit" parent="Properties" instance=ExtResource( 3 )]
margin_left = 89.0
margin_right = 329.0
margin_bottom = 27.0
rect_min_size = Vector2( 240, 27 )

[node name="CallMethodLabel" type="Label" parent="Properties"]
margin_left = 337.0
margin_top = 6.0
margin_right = 432.0
margin_bottom = 20.0
text = "Method Name:"

[node name="CallMethodEdit" parent="Properties" instance=ExtResource( 3 )]
margin_left = 440.0
margin_right = 620.0
margin_bottom = 27.0
rect_min_size = Vector2( 180, 27 )

[node name="ArgumentsLabel" type="Label" parent="Properties"]
margin_left = 628.0
margin_top = 6.0
margin_right = 698.0
margin_bottom = 20.0
text = "Arguments"

[node name="ArgumentsSpinBox" type="SpinBox" parent="Properties"]
margin_left = 706.0
margin_right = 782.0
margin_bottom = 27.0
max_value = 99.0

[node name="Arguments" type="VBoxContainer" parent="."]
margin_top = 49.0
margin_right = 782.0
margin_bottom = 49.0
custom_constants/separation = 5
